# competitive-prog

./: .ccls  .gitignore  README.md  layout.kdl  meson.build
codechef/: DEC21C_ROPASCI.cpp  EQCARDGAME.cpp  HS08TEST.cpp  INTSEQ.cpp  MASTER.cpp  PUSH7PA.cpp  STRINGXOR.cpp  SUMANDOR.cpp  example.cpp  meson.build
codechef/samples/: DEC21C_ROPASCI.txt  DEC21C_ROPASCI_1.txt  DEC21C_ROPASCI_2.txt  DEC21C_ROPASCI_3.txt
codeforces/: 321E.py  769B.cpp  meson.build
cses.fi/: apartments.cpp  counting_rooms.cpp  distinct_numbers.cpp  increasing_array.cpp  labyrinth.cpp  meson.build  missing_number.cpp  number_spiral.cpp  permutations.cpp  playlist.cpp  repetitions.cpp  static_range_sum_queries.cpp  wierd_algorithm.cpp
